# file_dedupe

./: .gitignore  Cargo.toml  ReadMe.md  conf.json
dedup-core/: Cargo.toml
dedup-core/src/: config.rs  lib.rs  main.rs  models.rs  scanner.rs
src/: benchmark.rs  comparison.rs  lib.rs  main.rs  methods.rs  plugins.rs
src/file_generators/: mod.rs
src/plugins/: base.rs  full_duplicates.rs  input_plugins.rs  mod.rs  partial_duplicates.rs
src/plugins/full_duplicates/: full_hash_plugin.rs
src/plugins/partial_duplicates/: piecewise_plugin.rs
