[package]
name = "file_deduplicator"
version = "0.1.0"
edition = "2024"

[lib]
name = "file_deduplicator"
path = "src/lib.rs"

[[bin]]
name = "file_deduplicator"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.100"
defaultdict = "0.19.0"
rayon = "1.11.0"
ring = "0.17.14"
serde = { version = "1.0.228", features = ["derive"] }
sha2 = "0.10.9"
walkdir = "2.5.0"
hex = "0.4.3"

[dev-dependencies]
pretty_assertions = "1.4.1"
tempfile = "3.23.0"

