[package]
name = "file_deduplicator"
version = "0.1.0"
edition = "2024"

[lib]
name = "file_deduplicator"
path = "src/lib.rs"

[[bin]]
name = "file_deduplicator"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.100"
defaultdict = "0.19.0"
ring = "0.17.14"
serde = { version = "1.0.228", features = ["derive"] }
walkdir = "2.5.0"
hex = "0.4.3"
serde_json = "1.0.145"

[dev-dependencies]
pretty_assertions = "1.4.1"
tempfile = "3.23.0"

